--- a/hy-music-project/package.json
+++ b/hy-music-project/package.json
@@ -2,6 +2,8 @@
   "name": "hy-music-project",
   "version": "0.1.0",
   "private": true,
+  
+  "homepage": "./",
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@craco/craco": "^6.4.3",
